Moved container width to a div inside main to fix a bug on IE11

--- a/assets/src/scss/index.scss
+++ b/assets/src/scss/index.scss
@@ -25,8 +25,6 @@ body {
 }
 
 main {
-	max-width: 1200px;
-	margin: auto;
 	padding-top: 4em;
 	padding-bottom: 4em;
 }
